Adapted the mzIdentML validator to Java 12